webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
/* ... */
.device-desktop .aphront-multi-column-fluid .aphront-multi-column-2-up
 .aphront-multi-column-column-outer.third .phui-oi-col2 {
   display: none;
 }


/* - Launcher List ---------------------------------------------------------- */

.phui-oi-image-icon {
  background: none;
  width: 40px;
  height: 40px;
  margin: 8px 6px;
  position: absolute;
}

.phui-oi-image-icon .phui-icon-view {
  position: absolute;
  width: 40px;
  height: 40px;
  font-size: 26px;
  text-align: center;
  line-height: 36px;
}

.phui-oi-image {
  width: 40px;
  height: 40px;
  border-radius: 3px;
  background-size: 100%;
  margin: 8px 6px;
  position: absolute;
}

.phui-oi-with-image-icon .phui-oi-frame,
.phui-oi-with-image .phui-oi-frame {
  min-height: 52px;
}

.phui-oi-with-image-icon .phui-oi-content-box,
.phui-oi-with-image .phui-oi-content-box {
  margin-left: 46px;
}

/* - Launcher Button -------------------------------------------------------- */

.phui-oi-col2.phui-oi-side-column {
  text-align: right;
  vertical-align: middle;
  padding-right: 4px;
}

.device-phone .phui-oi-col2.phui-oi-side-column {
  padding: 0 8px 8px;
  text-align: left;
}

.phui-oi-col0.phui-oi-checkbox {
  width: 28px;
  text-align: center;
}

.phui-oi-selectable {
  cursor: pointer;
  -webkit-user-select: none;
  user-select: none;
}

/* When the list selection state can be toggled on the client (as in the bulk
  editor), keep the border color consistent to make the interaction feel more
  robust. */
ul.phui-oi-list-view .phui-oi-selectable
  .phui-oi-frame {
  border-color: {$blueborder};
}

.differential-revision-size {
  padding: 0 4px;
  border-radius: 4px;
  background: {$lightgreybackground};
  cursor: pointer;
}

.differential-revision-size .phui-icon-view {
  margin: 0 1px 0 1px;
  font-size: 7px;
  position: relative;
  top: -2px;
  color: {$lightbluetext};
}

.differential-revision-large {
  background: {$sh-orangebackground};
}

/* NOTE: These are intentionally using nonstandard colors, see T13127. */

.differential-revision-large .phui-icon-view {
  color: #e5ae7e;
}

.differential-revision-small {
  background: #f2f7ff;
}

.differential-revision-small .phui-icon-view {
  color: #6699ba;
}

.phui-oi-tail {
  text-align: center;
  padding: 8px 0;
  background: linear-gradient({$lightbluebackground}, #fff 66%, #fff);
}

.phui-oi-menu {
  background: {$lightbluebackground};
  border-style: solid;
  border-color: {$thinblueborder};
  padding: 4px;
}

.device-desktop .phui-oi-menu,
.device-tablet .phui-oi-menu {
  width: 200px;
  border-width: 0 0 0 1px;
}

.device-phone .phui-oi-menu {
  border-width: 1px 0 0;
}

